# ipuos

./: Cargo.toml  justfile
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  vga_buffer.rs
