[package]
name = "ipuos"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
x86_64 = "0.14.2"


[dependencies.spin]
version = "0.5.2"
# features = ["mutex"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]